snowy-server/snowy-gateway-app/k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowy-gateway-app
spec:
  template:
    spec:
      containers:
      - name: gateway
