snowy-server/snowy-gateway-app/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowy-gateway-app
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Gateway specific annotations (support WebSocket, large file upload, etc.)
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: gateway-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snowy-gateway-app
            port:
              number: 9003
